--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Zoo Boom - Fun Animal Matching Puzzle Game | Play Online Free</title>
     <meta name="description" content="Play Zoo Boom online for free! Match colorful animals in this addictive puzzle game. Perfect for all ages with easy controls and challenging levels.">
     <link rel="canonical" href="https://zooboom.club/">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9HVKJ98MFV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-9HVKJ98MFV');
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
